--- a/app/src/main/res/layout/single_lesson_fragment.xml
+++ b/app/src/main/res/layout/single_lesson_fragment.xml
@@ -21,7 +21,7 @@
 	        android:layout_height="wrap_content"
             android:text="Информатика"
             android:textColor="@color/theme_blue"
-	        android:textSize="25sp"
+	        android:textSize="20sp"
             android:layout_marginBottom="10dp"
 	        android:textStyle="bold" />
 
@@ -40,8 +40,8 @@
             <ImageView
                 android:layout_marginRight="7dp"
                 android:src="@drawable/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="20dp"
+                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/single_lesson_time"
@@ -68,8 +68,8 @@
             <ImageView
                 android:layout_marginRight="7dp"
                 android:src="@drawable/room"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="20dp"
+                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/lesson_room"
@@ -93,8 +93,8 @@
             <ImageView
                 android:layout_marginRight="7dp"
                 android:src="@drawable/literature"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="20dp"
+                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/single_information_type"
@@ -120,8 +120,8 @@
             <ImageView
                 android:layout_marginRight="7dp"
                 android:src="@drawable/contacts"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="20dp"
+                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/single_information_teacher"
