--- a/app/src/main/res/layout/welcome_activity.xml
+++ b/app/src/main/res/layout/welcome_activity.xml
@@ -5,6 +5,30 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+
+
+    <ImageView
+        android:id="@+id/login_poster"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/poster" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/login_app_name"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="133dp" />
+
     <Button
         android:id="@+id/login_button"
         style="@style/AppButton"
@@ -15,23 +39,5 @@
         android:layout_marginBottom="70dp"
         android:text="@string/login_button_caption"
         android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/login" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="71dp"
-        android:text="@string/welcome_screen_caption" />
 
 </RelativeLayout>
