--- a/app/src/main/res/layout/home_work_grid_element.xml
+++ b/app/src/main/res/layout/home_work_grid_element.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
+    android:background="@drawable/base_selector"
     android:orientation="vertical" >
     
     <ImageView 
