--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -12,11 +12,11 @@
         android:textSize="17sp"
         android:layout_gravity="left" 
         android:layout_marginBottom="5dp"/>
-    
-    <View 
-        android:background="@color/theme_blue"
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"/>
+        android:layout_height="1dp"
+        android:background="@color/theme_blue" />
 
     <TextView
         android:id="@+id/setting_facultet_title"
@@ -35,12 +35,7 @@
 		android:textColor="@color/theme_blue"
         android:textSize="17sp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/theme_blue" />
-    
-     <Button
+    <Button
         android:id="@+id/setting_about"
        	android:background="@drawable/base_selector"
 		android:textColor="@color/theme_blue"
@@ -49,6 +44,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/about" />
+
+    <View
+        android:background="@color/theme_blue"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"/>
+
+    <LinearLayout
+        android:padding="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:textSize="17sp"
+            android:text="@string/settings_notification_switch"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Switch
+            android:id="@+id/setting_notification_switch"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
