--- a/app/src/main/res/layout/home_work_spinner_drop_down.xml
+++ b/app/src/main/res/layout/home_work_spinner_drop_down.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:id="@android:id/text1"
     android:padding="7dp"
+    android:textSize="17sp"
     android:textColor="@android:color/white"
     android:layout_height="match_parent">
 
