--- a/app/src/main/res/layout/lesson_list_element.xml
+++ b/app/src/main/res/layout/lesson_list_element.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="5dp"
@@ -49,24 +49,43 @@
             <LinearLayout
                 android:id="@+id/lesson_teacher_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="21dp"
-                    android:layout_height="21dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="0"
-                    android:src="@drawable/ic_person" />
-
-                <TextView
-                    android:id="@+id/lesson_teacher"
-                    android:layout_width="200dp"
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:padding="3dp"
-                    android:text="Жуков В.В."
-                    android:textSize="17dp" />
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:layout_width="21dp"
+                        android:layout_height="21dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="0"
+                        android:src="@drawable/ic_person" />
+
+                    <TextView
+                        android:id="@+id/lesson_teacher"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:padding="3dp"
+                        android:text="Жуков В.В."
+                        android:textSize="17dp" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/lesson_list_element_homework_indicator"
+                    android:layout_width="30dp"
+                    android:layout_height="40dp"
+
+                    android:visibility="visible"
+                    android:src="@drawable/ic_homerk"
+                    android:layout_weight="0" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -94,15 +113,7 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/lesson_list_element_homework_indicator"
-        android:layout_width="30dp"
-        android:layout_height="40dp"
-        android:layout_alignParentRight="true"
-		android:layout_centerVertical="true"
-        android:layout_marginRight="15dp"
-        android:visibility="gone"
-        android:src="@drawable/ic_homerk" />
 
-</RelativeLayout>
+
+</LinearLayout>
 
