--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -1,113 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
     android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:padding="15dp" >
-
-    <TextView 
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="@string/setting_staff"
-        android:textSize="17sp"
-        android:layout_gravity="left" 
-        android:layout_marginBottom="5dp"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/theme_blue" />
-
-    <TextView
-        android:id="@+id/setting_facultet_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:gravity="left|center_vertical"
-		android:textColor="@color/theme_blue"
-        android:textSize="17sp" />
-    <TextView
-        android:id="@+id/setting_group_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:gravity="left|center_vertical"
-		android:textColor="@color/theme_blue"
-        android:textSize="17sp" />
-
-    <Button
-        android:id="@+id/setting_about"
-       	android:background="@drawable/base_selector"
-		android:textColor="@color/theme_blue"
-		android:gravity="left|center_vertical"
-		android:padding="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/about" />
-
-    <View
-        android:background="@color/theme_blue"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"/>
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <LinearLayout
-        android:padding="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:padding="15dp" >
 
         <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/setting_staff"
             android:textSize="17sp"
-            android:text="@string/settings_notification_switch"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_gravity="left"
+            android:layout_marginBottom="5dp"/>
 
-        <Switch
-            android:id="@+id/setting_notification_switch"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/theme_blue" />
+
+        <TextView
+            android:id="@+id/setting_facultet_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:gravity="left|center_vertical"
+            android:textColor="@color/theme_blue"
+            android:textSize="17sp" />
+        <TextView
+            android:id="@+id/setting_group_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:gravity="left|center_vertical"
+            android:textColor="@color/theme_blue"
+            android:textSize="17sp" />
+
+        <Button
+            android:id="@+id/setting_about"
+            android:background="@drawable/base_selector"
+            android:textColor="@color/theme_blue"
+            android:gravity="left|center_vertical"
+            android:padding="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/about" />
+
+        <View
+            android:background="@color/theme_blue"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"/>
+
+        <LinearLayout
+            android:padding="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:textSize="17sp"
+                android:text="@string/settings_notification_switch"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <CheckBox
+                android:id="@+id/setting_notification_switch"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="left"
+            android:gravity="left"
+            android:text="Расписание" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/theme_blue" />
+
+        <Button
+            android:id="@+id/setting_full_time_button"
+            android:background="@drawable/base_selector"
+            android:textColor="@color/theme_blue"
+            android:gravity="left|center_vertical"
+            android:padding="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/setting_full_time_button" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/theme_blue" />
+
+        <Button
+            android:id="@+id/setting_logout_button"
+            android:background="@drawable/base_selector"
+            android:textColor="@color/theme_blue"
+            android:gravity="left|center_vertical"
+            android:padding="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/setting_logout" />
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="17sp"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="left"
-        android:gravity="left"
-        android:text="Расписание" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/theme_blue" />
-    
-    <Button
-        android:id="@+id/setting_full_time_button"
-       	android:background="@drawable/base_selector"
-		android:textColor="@color/theme_blue"
-		android:gravity="left|center_vertical"
-		android:padding="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/setting_full_time_button" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/theme_blue" />
-
-    <Button
-        android:id="@+id/setting_logout_button"
-       	android:background="@drawable/base_selector"
-		android:textColor="@color/theme_blue"
-		android:gravity="left|center_vertical"
-		android:padding="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/setting_logout" />
-
-</LinearLayout>
+</ScrollView>
