teacher some fixes

--- a/app/src/main/res/layout/lesson_list_element.xml
+++ b/app/src/main/res/layout/lesson_list_element.xml
@@ -82,7 +82,7 @@
                     android:layout_width="30dp"
                     android:layout_height="40dp"
 
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:src="@drawable/ic_homerk"
                     android:layout_weight="0" />
 
