--- a/app/src/main/res/layout/notification_closest_and_current_lesson.xml
+++ b/app/src/main/res/layout/notification_closest_and_current_lesson.xml
@@ -31,7 +31,9 @@
         <TextView
             android:layout_marginLeft="10dp"
             android:id="@+id/notification_current_lesson_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:lines="1"
+            android:ellipsize="end"
             android:layout_height="wrap_content"
             android:text="Физика"/>
 
@@ -63,8 +65,10 @@
         <TextView
             android:layout_marginLeft="10dp"
             android:id="@+id/notification_closest_lesson_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:ellipsize="end"
             android:layout_height="wrap_content"
+            android:lines="1"
             android:text="Физика"/>
 
         <TextView
