Time to change windows

--- a/app/src/main/res/layout/timetable_fragment.xml
+++ b/app/src/main/res/layout/timetable_fragment.xml
@@ -1,67 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    
-    android:orientation="vertical">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout 
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <it.sephiroth.android.library.widget.HListView
-	       android:id="@+id/calendar_list"
-	       android:choiceMode="singleChoice"
-	       android:layout_width="match_parent"
-	       android:divider="@color/white"
-	       android:scrollbars="horizontal"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-	       android:layout_height="60dp"
-	       android:drawSelectorOnTop="false"
-		   android:background="@color/theme_blue"
-	       tools:context=".MainActivity"/>
+            <it.sephiroth.android.library.widget.HListView
+                android:id="@+id/calendar_list"
+                android:choiceMode="singleChoice"
+                android:layout_width="match_parent"
+                android:divider="@color/white"
+                android:scrollbars="horizontal"
 
-         <ru.rgups.time.views.CalendarHint 
-             android:id="@+id/calendar_list_hint"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_centerInParent="true"
-			 android:textStyle="bold"
-			 android:visibility="gone"
-			 android:textColor="@color/theme_blue"
-			 android:background="@color/theme_green"
-			 android:textSize="20sp"
-			 android:padding="10dp"/>
-        
-    </RelativeLayout>
-    
-	<android.support.v4.view.ViewPager
-	    android:id="@+id/lesson_view_pager"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent">
-	    
-	</android.support.v4.view.ViewPager>
+                android:layout_height="60dp"
+                android:drawSelectorOnTop="false"
+                android:background="@color/theme_blue"
+                tools:context=".MainActivity"/>
 
-    <ListView
-        android:id="@+id/lesson_list"
-        android:scrollbarStyle="outsideOverlay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
-    
-    <RelativeLayout 
-        android:id="@+id/lesson_list_empty_view"
+            <ru.rgups.time.views.CalendarHint
+                android:id="@+id/calendar_list_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textStyle="bold"
+                android:visibility="gone"
+                android:textColor="@color/theme_blue"
+                android:background="@color/theme_green"
+                android:textSize="20sp"
+                android:padding="10dp"/>
+
+        </RelativeLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/lesson_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v4.view.ViewPager>
+
+        <ListView
+            android:id="@+id/lesson_list"
+            android:scrollbarStyle="outsideOverlay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </ListView>
+
+        <RelativeLayout
+            android:id="@+id/lesson_list_empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+
+                android:text="Пар нет"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
+    <FrameLayout
+        android:visibility="gone"
+        android:background="@color/white"
+        android:id="@+id/request_progress"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        
-        <TextView 
-            
-            android:text="Пар нет"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
-    </RelativeLayout>
 
-</LinearLayout>
+        <ProgressBar
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </FrameLayout>
+
+
+</FrameLayout>
+
