--- a/app/src/main/res/layout/group_list_divier.xml
+++ b/app/src/main/res/layout/group_list_divier.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/theme_blue"
+    android:layout_height="@dimen/abc_action_bar_default_height_material"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:padding="10dp" >
+    android:padding="10dp"
+    android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/levelTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1-й курс"
-        android:textColor="@color/theme_green"
         android:textSize="17sp"
+        android:textColor="@color/white"
         android:textStyle="bold" />
 
 </LinearLayout>
