--- a/app/src/main/res/drawable/hw_check_button.xml
+++ b/app/src/main/res/drawable/hw_check_button.xml
@@ -12,7 +12,7 @@
                         android:bottomLeftRadius="0dp"
                         android:topRightRadius="2dp"
                         android:bottomRightRadius="2dp"/>
-                    <solid android:color="@color/theme_green_with_alpha" />
+                    <solid android:color="@color/primary" />
 
 
 
@@ -42,7 +42,7 @@
                         android:bottomLeftRadius="0dp"
                         android:topRightRadius="2dp"
                         android:bottomRightRadius="2dp"/>
-                    <solid android:color="@color/theme_blue_with_alpha" />
+                    <solid android:color="@color/accent" />
 
 
 
