--- a/app/src/main/res/layout/timetable_fragment.xml
+++ b/app/src/main/res/layout/timetable_fragment.xml
@@ -23,7 +23,7 @@
 
                 android:layout_height="60dp"
                 android:drawSelectorOnTop="false"
-                android:background="@color/theme_blue"
+                android:background="@color/primary"
                 tools:context=".MainActivity"/>
 
             <ru.rgups.time.views.CalendarHint
@@ -33,8 +33,8 @@
                 android:layout_centerInParent="true"
                 android:textStyle="bold"
                 android:visibility="gone"
-                android:textColor="@color/theme_blue"
-                android:background="@color/theme_green"
+                android:textColor="@color/white"
+                android:background="@color/primary_dark"
                 android:textSize="20sp"
                 android:padding="10dp"/>
 
