--- a/app/src/main/res/drawable/calendar_selector.xml
+++ b/app/src/main/res/drawable/calendar_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_activated="true" android:drawable="@color/theme_green" />
+    <item android:state_activated="true" android:drawable="@color/accent" />
     <item android:drawable="@android:color/transparent" />
 </selector>
