--- a/app/src/main/res/drawable/lesson_free_calendar_list_selector.xml
+++ b/app/src/main/res/drawable/lesson_free_calendar_list_selector.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" android:drawable="@color/theme_green" />
+    <item android:state_pressed="true" android:drawable="@color/accent" />
     
     <item android:state_enabled="true"
-     	android:state_focused="true" android:drawable="@color/theme_green" />
+     	android:state_focused="true" android:drawable="@color/accent" />
     
     <item android:state_enabled="true"
-     	android:state_selected="true" android:drawable="@color/theme_green" />
+     	android:state_selected="true" android:drawable="@color/accent" />
     
-    <item android:state_activated="true" android:drawable="@color/theme_green"></item>
+    <item android:state_activated="true" android:drawable="@color/accent"></item>
     
-    <item android:state_checked="true" android:drawable="@color/theme_green"></item>
+    <item android:state_checked="true" android:drawable="@color/accent"></item>
     
     <item android:state_checked="false" android:drawable="@color/lesson_free"></item>
     
