--- a/app/src/main/res/layout/group_list_divier.xml
+++ b/app/src/main/res/layout/group_list_divier.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/abc_action_bar_default_height_material"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/primary"
     android:orientation="vertical"
     android:padding="10dp"
     android:gravity="center_vertical">
