--- a/app/src/main/res/layout/home_work_list_divier.xml
+++ b/app/src/main/res/layout/home_work_list_divier.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textColor="@color/theme_blue"
+        android:textColor="@color/primary_text"
         android:textSize="15sp"
         android:padding="5dp"
         android:textStyle="bold" />
