--- a/app/src/main/res/layout/home_work_list_element.xml
+++ b/app/src/main/res/layout/home_work_list_element.xml
@@ -33,7 +33,7 @@
                         android:layout_marginBottom="5dp"
                         android:textStyle="bold"
                         android:visibility="gone"
-                        android:textColor="@color/theme_blue"
+                        android:textColor="@color/primary_text"
                         android:text="Физика"
                         android:textSize="19sp" />
 
@@ -64,11 +64,13 @@
 
                     <TextView
                         android:id="@+id/home_work_list_element_photo_count"
-                        android:background="@color/theme_blue_with_alpha"
+                        android:background="@color/primary_light"
                         android:gravity="center"
                         android:layout_centerInParent="true"
                         android:textColor="@color/white"
                         android:textSize="20sp"
+
+                        android:alpha="0.8"
                         android:text="10 фото"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
