--- a/app/src/main/res/layout/lesson_list_divier.xml
+++ b/app/src/main/res/layout/lesson_list_divier.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:textColor="@color/theme_blue"
+            android:textColor="@color/primary_text"
             android:textSize="15sp"
             android:textStyle="bold" />
 
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
 			android:layout_alignParentRight="true"
-			android:textColor="@color/theme_blue"
+			android:textColor="@color/primary_text"
             android:textSize="15sp"
             android:textStyle="bold"/>
     </RelativeLayout>
